--- a/MAKEFILE
+++ b/MAKEFILE
@@ -15,15 +15,17 @@ CFLAGS += -D_POSIX_C_SOURCE=201112L -D_XOPEN_SOURCE # feature_test_macros for ge
 
 # We have no libraries to link against except libc, but we want to keep
 # the symbols for debugging
-LDFLAGS= -rdynamic
+LDFLAGS= -rdynamic -lz
 # ******************************************************************************
 
-all: clean <target>
+all: clean receiver sender
 debug: CFLAGS += -g -DDEBUG -Wno-unused-parameter -fno-omit-frame-pointer
-debug: clean <target>
-<target>: <file>.o ...
+debug: clean sender
+debug: clean receiver
+sender: sender.o packet_interface.o create_socket.o
+receiver: receiver.o packet_interface.o create_socket.o
 
 .PHONY: clean
 
 clean:
-	@rm -f <target> <file>.o ...
+	@rm -f receiver sender *.o
